--- a/client/style.css
+++ b/client/style.css
@@ -1,19 +1,24 @@
 .page-column {
     max-width: 600px;
     margin: 30px auto;
-  }
-  
-  h4 {
+}
+
+h4 {
     text-align: center;
     color: #26a69a;
-  }
-  
-  .btn-box {
-    text-align: center;
-  }
-  
-  #presence-indicator {
+}
+
+.btn-box {
+    text-align: right;
+}
+
+#presence-indicator {
     position: absolute;
     top: 5px;
     right: 15px;
-  }
+}
+
+li {
+    display: flex;
+    justify-content: space-between;
+}
